<resources>
    <string name="app_name">Are We There Yet</string>

    <string name="hello_world">Hello world!</string>
    <string name="title">Are We There Yet?</string>
    <string name="action_settings">Settings</string>

    <string name="message">Message:</string>
    <string name="phone">Phone Number:</string>
    <string name="interval">How long do you want to wait between messages being sent? (Minutes)</string>

    <string name="go">Start</string>
    <string name="end">Stop</string>
</resources>
